@@ -4,13 +4,14 @@
 #
 
 # full path to the python interpretor
-export PYTHON="/usr/bin/python2.3"
+export PYTHON="/usr/local/bin/python2.3"
 
 # path to ZOPE_HOME/lib/python
-export SOFTWARE_HOME="/usr/lib/zope/Zope-2_7-branch/lib/python"
+export SOFTWARE_HOME="/opt/zope/releases/Zope-2_7-branch/lib/python"
+
 
 # path to your instance. Don't set it if you aren't having  instance
-export INSTANCE_HOME="/var/lib/zope/plone/"
+export INSTANCE_HOME="/opt/zope/instances/plone21/"
 
 
 ${PYTHON} runalltests.py
