@@ -1,6 +1,10 @@
 1.3.2-6 - xxxx-xx-xx
 ====================
 
+ * More a workaround than a fix for [ 1056252 ] Content type algorithm
+   can be confused.
+   [tiran]
+
  * workaround for [ 1068001 ] BaseUnit Encoding Error: macintosh
    [yenzenz]
 
